Attempt to fix mobile img stretching vertically

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ nav ul li a {
 
 .menu-section-div img {
     width: 40%;
-    max-height: 100%;
+    max-height: 50%;
     padding: 0;
     margin: 0;
     margin-left: auto;
